--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  sqflite:
+  sqflite: ^2.2.8+4
+  provider: ^6.0.5
+  shared_preferences: ^2.1.2
+  
 
 
 
